# sophie-baby-diary

./: .gitignore  CALIBRATION.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_PLAN.md  README.md  WARP.md  cli.py  pyproject.toml
modules/: config.py  coordinates.py  detection.py  layout.py  rendering.py  validation.py
tests/fixtures/: generate_calibration_grid.py  generate_fixtures.py  generate_sample_page.py  golden_detection.json
tests/integration/: test_e2e_detection.py  test_e2e_rendering.py
tests/unit/: test_coordinates.py  test_validation.py
